fail_crate/tests/const_and_optional.rs
use inew::New;

#[derive(New)]
#[new(const)]
struct A {
    #[new(optional)]
    x: u32
}

fn main() {}
